Summary of changes:
* The database file `db.sqlite3` has been modified.
* The requirement for `Jinja2` has been added to `requirements.txt`.
* In `index.html`,

--- a/summarizer/templates/login.html
+++ b/summarizer/templates/login.html
@@ -9,7 +9,7 @@
         WELCOME TO SUMMARIZEHUB
       </div>
       <form method="post">
-        {% csrf_token %}
+        <input type="hidden" name="csrfmiddlewaretoken" value="{% csrf_token %}">
         <div class="field">
           <input type="text" name="username" required>
           <label>Email Address</label>
